--- a/cc-web/src/main/web/angular.json
+++ b/cc-web/src/main/web/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "np-app": {
+    "ang7route": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/np-app",
+            "outputPath": "dist/ang7route",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -43,25 +44,32 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "np-app:build"
+            "browserTarget": "ang7route:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "np-app:build:production"
+              "browserTarget": "ang7route:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "np-app:build"
+            "browserTarget": "ang7route:build"
           }
         },
         "test": {
@@ -95,19 +103,20 @@
         }
       }
     },
-    "np-app-e2e": {
+    "ang7route-e2e": {
       "root": "e2e/",
       "projectType": "application",
+      "prefix": "",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "np-app:serve"
+            "devServerTarget": "ang7route:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "np-app:serve:production"
+              "devServerTarget": "ang7route:serve:production"
             }
           }
         },
@@ -123,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "np-app"
+  "defaultProject": "ang7route"
 }
