stable with front end backend.

--- a/cc-server/src/main/resources/application.properties
+++ b/cc-server/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.application.name=cc-app
 server.port=8090
+
+#Disabled Spring security log in page
 security.basic.enabled=false
+
+spring.jpa.hibernate.ddl-auto=none
+logging.level.root=INFO
+#spring.h2.console.enabled=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ccdev
+spring.datasource.username=root
+spring.datasource.password=root
