--- a/cc-web/src/main/web/proxy.config.json
+++ b/cc-web/src/main/web/proxy.config.json
@@ -1,7 +1,8 @@
-{
-    "/api/*": {
-      "target": "http://localhost:8090",
-      "secure": false,
-      "pathRewrite": {"^/api" : ""}
-    }
+  {
+  "/api/*": {
+    "target": "http://localhost:8090",
+    "secure": false,
+    "logLevel": "debug",
+    "changeOrigin": true
   }
+}
