--- a/cc-server/src/main/resources/application.properties
+++ b/cc-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=cc-app
-server.port=8090
+server.port=8080
 
 #Disabled Spring security log in page
 security.basic.enabled=false
@@ -17,9 +17,9 @@ logging.level.root=INFO
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mariadb://localhost:3306/ccdev
+spring.datasource.url=jdbc:mariadb://ccdb.c1svxqbejsit.us-east-1.rds.amazonaws.com:3306/ccdb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
@@ -31,9 +31,11 @@ spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.datasource.jmx-enabled=false
