added context path

--- a/cc-server/src/main/resources/application.properties
+++ b/cc-server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=cc-app
 server.port=8080
+server.servlet.context-path=/cc-app
 
 #Disabled Spring security log in page
 security.basic.enabled=false
