local db and proxy change

--- a/cc-server/src/main/resources/application.properties
+++ b/cc-server/src/main/resources/application.properties
@@ -9,18 +9,18 @@ security.basic.enabled=false
 logging.level.root=INFO
 #spring.h2.console.enabled=true
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/ccdev
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/ccdev
+spring.datasource.username=root
+spring.datasource.password=root
 
 
 # ===============================
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mariadb://ccdb.c1svxqbejsit.us-east-1.rds.amazonaws.com:3306/ccdb
-spring.datasource.username=root
-spring.datasource.password=password
+#spring.datasource.url=jdbc:mariadb://ccdb.c1svxqbejsit.us-east-1.rds.amazonaws.com:3306/ccdb
+#spring.datasource.username=root
+#spring.datasource.password=password
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle=true
